c4prj1_deck/grade.txt
Grading at Tue Oct  1 20:27:01 UTC 2019
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:308:12: error: format ‘%zu’ expects argument of type ‘size_t’, but argument 3 has type ‘unsigned int’ [-Werror=format=]
     printf("index: %zu,  match[index]: %zu, \n", index, match[index]);
            ^
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
